--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://Sulaimanb1012.github.io/project-website.",
-  "name": "project-portfolio",
+  "homepage": "https://sulaimanb1012.github.io/portfolio-website",
+  "name": "portfolio-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
