--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sulaimanb1012.github.io/portfolio-website",
+  "homepage": "https://sulaimanb1012.github.io/portfolio-website/",
   "name": "portfolio-website",
   "private": true,
   "version": "0.0.0",
